--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = paulstoffregen/Encoder@^1.4.2
+lib_deps = 
+	olikraus/U8g2@^2.34.11
